--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=User
 server.port=8181
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:8000/customerdb
-spring.datasource.username=system
-spring.datasource.password=system
+spring.datasource.url=jdbc:mysql://localhost:8000/customerdb.c9qsrkdrweln.ap-south-1.rds.amazonaws.com:3306/customerhackdb
+spring.datasource.username=admin
+spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=update
 eureka.client.service-url.defaultZone=http://localhost:2222/eureka
 
