--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 
 env:
   secrets-manager:
-    LOGIN: User:sonartoken
-    HOST: User:host
-    Organization: User:organization
-    Project: User:projectKey
+    LOGIN: customerLoginSignup:sonartoken
+    HOST: customerLoginSignup:host
+    Organization: customerLoginSignup:organization
+    Project: customerLoginSignup:projectKey
 
 phases:
   install:
